[wip] tag visibility fix

--- a/src/components/TaskItem.scss
+++ b/src/components/TaskItem.scss
@@ -54,7 +54,8 @@
 
   &.selected > .text,
   &.selected > .checkbox,
-  &.selected > .remove {
+  &.selected > .remove,
+  &.selected > .tagList {
     background:$main-color;
     color: white;
   }
