--- a/src/components/TaskTag.scss
+++ b/src/components/TaskTag.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   text-align: center;
   font-size: 0.75em;
+  border: 1px solid black;
 
   .name {
     overflow: hidden;
